Correction bug du scrollbar quand il y a peu de contenu

--- a/html/style.css
+++ b/html/style.css
@@ -7,16 +7,16 @@ body {
 a, a:visited {text-decoration: none; color: #009; outline: none;}
 a:hover {text-decoration: underline; color: #006;}
 
-#scrollbar { width: 300px; clear: both; }
-#scrollbar .viewport { width: 295px; height: 200px; overflow: hidden; position: relative; }
-#scrollbar .overview { list-style: none; position: absolute; left: 0; top: 0; }
-#scrollbar .thumb { background-color: #bbb; }
-#scrollbar .thumb:hover { background-color: #666; }
-#scrollbar .scrollbar { position: relative; float: right; width: 5px; }
-#scrollbar .track { background-color: #fff; height: 100%; width: 3px; position: relative; padding: 0 1px; }
-#scrollbar .thumb { height: 20px; width: 5px; cursor: pointer; overflow: hidden; position: absolute; top: 0; }
-#scrollbar .thumb .end { overflow: hidden; height: 5px; width: 5px; }
-#scrollbar .disable{ display: none; }
+#scrollbar1 { width: 300px; clear: both; }
+#scrollbar1 .viewport { width: 295px; height: 200px; overflow: hidden; position: relative; }
+#scrollbar1 .overview { list-style: none; position: absolute; left: 0; top: 0; }
+#scrollbar1 .thumb { background-color: #bbb; }
+#scrollbar1 .thumb:hover { background-color: #666; }
+#scrollbar1 .scrollbar { position: relative; float: right; width: 5px; }
+#scrollbar1 .track { background-color: #fff; height: 100%; width: 3px; position: relative; padding: 0 1px; }
+#scrollbar1 .thumb { height: 20px; width: 5px; cursor: pointer; overflow: hidden; position: absolute; top: 0; }
+#scrollbar1 .thumb .end { overflow: hidden; height: 5px; width: 5px; }
+#scrollbar1 .disable{ display: none;}
 
 /*Pannel*/
 div#pannel {padding-bottom: 3px; border-bottom: 1px solid #bbb;}
